# pix_engine

./: CMakeLists.txt
data/shaders/: simple.frag  simple.vert
src/: bitmap.c  bitmap.h  color.c  color.h  common.h  file.c  file.h  gl_window.c  gl_window.h  main.c  mapping.c  mapping.h  shader.c  shader.h  soft.c  soft.h  vec.c  vec.h
